@@ -1239,7 +1239,8 @@ enum {
   DPS_FLAG_ADD_SERVURL	= 128,
   DPS_FLAG_UNOCON       = 256,
   DPS_FLAG_SORT_POPRANK = 512,
-  DPS_FLAG_FROM_STORED  = 1024
+  DPS_FLAG_FROM_STORED  = 1024,
+  DPS_FLAG_FAST_HREF_CHECK = 2048
 };
 
 /* URLFile actions */
